--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refund Policy - Technology Channel</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+        html, body {
+            height: 100%;
             margin: 0;
             padding: 0;
+            overflow-x: hidden;
             background-color: #313335;
             color: #fff;
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
         }
 
         header {
@@ -25,25 +27,10 @@
             margin: 0;
         }
 
-        nav ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-
         main {
             padding: 20px;
             max-width: 800px;
-            margin: auto;
+            margin: 20px auto;
             background-color: #414345;
             color: #fff;
             border-radius: 8px;
@@ -80,12 +67,26 @@
         a:hover {
             text-decoration: underline;
         }
+
+        .back-to-home {
+            display: block;
+            margin: 20px 0;
+            padding: 10px 20px;
+            background-color: #1e90ff;
+            color: #fff;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .back-to-home:hover {
+            background-color: #0c7dc0;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>Technology Channel Courses Refund Policy</h1>
-       
     </header>
     <main>
         <section class="refund-policy">
@@ -100,7 +101,7 @@
             </ul>
             <h3>How to Request a Refund:</h3>
             <ol>
-                <li><strong>Contact Us:</strong> To request a refund, please contact our support team at <a href="mailto:courses@technologychannel.org">courses@technologychannel.org</a> or call us at +977 9805832889.</li>
+                <li><strong>Contact Us:</strong> To request a refund, please contact our support team at<a href="mailto:courses@technologychannel.org">courses@technologychannel.org</a> or call us at +977 9805832889.</li>
                 <li><strong>Provide Details:</strong> Include your name, course enrolled in, date of enrollment, and the reason for your refund request.</li>
                 <li><strong>Processing Time:</strong> Our team will review your request and process your refund within 5-7 business days. You will receive a confirmation email once your refund has been processed.</li>
             </ol>
@@ -111,7 +112,7 @@
             <h3>Terms and Conditions:</h3>
             <ul>
                 <li>Refunds are only available within the first 7 days of enrollment.</li>
-                <li>Refund requests made after the 7-day period will not be eligible for a refund.</li>
+                <li>Refund requests made after the 7 days will not be eligible for a refund.</li>
                 <li>Refunds will be processed using the original method of payment.</li>
                 <li>We reserve the right to refuse a refund if we believe there is abuse of our refund policy.</li>
             </ul>
@@ -121,16 +122,15 @@
             </p>
             <h3>Contact Information:</h3>
             <p>
-                Email: <a href="mailto:courses@technology.com">courses@technology.com</a><br>
+                Email: <a href="mailto:courses@technologychannel.org">courses@technologychannel.org</a><br>
                 Phone: +977 9805832889
             </p>
         </section>
+        <a href="https://technologychannel.org" class="back-to-home">Back to Home</a>
+        <a></a>
     </main>
     <footer>
         <p>&copy; 2024 Technology Channel. All rights reserved.</p>
     </footer>
-    <script>
-      
-    </script>
 </body>
 </html>
