--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Technology Channel Courses Refund Policy. Learn more about our refund policy and how to request a refund for your IT courses.">
     <title>Refund Policy - Technology Channel</title>
     <style>
          html, body {
@@ -95,8 +96,8 @@
         <h1>Technology Channel Courses Refund Policy</h1>
     </header>
     <main>
-        <section class="refund-policy">
-            <h2>Refund Policy</h2>
+        <section class="refund-policy" aria-labelledby="refund-policy-title">
+            <h2 id="refund-policy-title">Refund Policy</h2>
             <p>
                 At Technology Channel, we are committed to providing you with the highest quality IT education and training. Your satisfaction is our top priority. Therefore, we offer a comprehensive refund policy to ensure you have a risk-free learning experience.
             </p>
@@ -107,7 +108,7 @@
             </ul>
             <h3>How to Request a Refund:</h3>
             <ol>
-                <li><strong>Contact Us:</strong> To request a refund, please contact our support team at <a href="mailto:courses@technologychannel.org">courses@technologychannel.org</a> or call us at +977 9805832889.</li>
+                <li><strong>Contact Us:</strong> To request a refund, please contact our support team at <a href="mailto:info@technologychannel.org">info@technologychannel.org</a></li>
                 <li><strong>Provide Details:</strong> Include your name, course enrolled in, date of enrollment, and the reason for your refund request.</li>
                 <li><strong>Processing Time:</strong> Our team will review your request and process your refund within 5-7 business days. You will receive a confirmation email once your refund has been processed.</li>
             </ol>
@@ -128,12 +129,11 @@
             </p>
             <h3>Contact Information:</h3>
             <p>
-                Email: <a href="mailto:courses@technologychannel.org">courses@technologychannel.org</a><br>
+                Email: <a href="mailto:info@technologychannel.org">info@technologychannel.org</a><br>
                 Phone: +977 9805832889
             </p>
         </section>
-        <a href="https://technologychannel.org" class="back-to-home">Back to Home</a>
-        <a></a>
+        <a href="https://technologychannel.org" class="back-to-home" aria-label="Go back to the Technology Channel homepage">Back to Home</a>
     </main>
     <footer>
         <p>&copy; 2024 Technology Channel. All rights reserved.</p>
